fix overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -3,21 +3,27 @@ body {
     padding: 0;
     box-sizing: border-box;
 
-    .container {
-        background: lightgray;
-        overflow: hidden;
-    }
-    #backdrop {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        overflow: hidden;
-    }
-    #character {
-        z-index: 2;
-        position: absolute;
-        overflow: hidden;
-    }
+        .container {
+            background: lightgray;
+            overflow: hidden;
+
+            #backdrop {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                overflow: hidden;
+            }
+            #character {
+                z-index: 2;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                position: absolute;
+                overflow: hidden;
+            }
+        }
+
 }
